adding changes to user profile and update profile

--- a/phtc/templates/main/profile.html
+++ b/phtc/templates/main/profile.html
@@ -29,5 +29,6 @@
 	    <p>Your user profile has been updated.</p>
 	  </div>
 	</div><!--end #myModal-->
-	<script src="/site_media/js/profile.js"></script>
+	<script src="/site_media/js/registration.js"></script>
+	<script src="/site_media/js/edit_profile.js"></script>
 {% endblock %}
