--- a/phtc/templates/registration/registration_form.html
+++ b/phtc/templates/registration/registration_form.html
@@ -6,11 +6,13 @@
 
 <p>Use the following form to create a new account to access PHTC modules.</p>
 
-    <form method='post' action='' class="well form-horizontal">{% csrf_token %}
+    <form method='post' id="registration" action='' class="well form-horizontal">{% csrf_token %}
 			{{form|bootstrap}}
 	
 	<div class="fieldwrapper">
-        <input type="submit" class="btn btn-primary" value="Send activation email" /></td>
+        <input class="btn btn-primary" value="Send activation email" /></td>
 	</div><!-- fieldwrapper -->
     </form>
+	<script src="/site_media/js/registration.js"></script>
+	<script src="/site_media/js/edit_profile.js"></script>
 {% endblock %}
