--- a/media/css/main.css
+++ b/media/css/main.css
@@ -444,7 +444,7 @@ a.completed {
     margin-top: 50px;
 }
 
-.well {
+#maincontent #content .well {
     border-color: #ccc;
     margin-right: 20px;
     margin-left: 20px;
