use up the whole content area for graphs

--- a/phtc/templates/stats.html
+++ b/phtc/templates/stats.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block noleftsidebar %} class="no-left-sidebar"{% endblock %}
 {% block content %}
 
 <ul class="nav nav-tabs">
