--- a/media/css/main.css
+++ b/media/css/main.css
@@ -583,3 +583,19 @@ td
 	font-weight: bold;
 }
 
+.interactive-scenario input {
+    margin: 5px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    background: #efefef;
+    border-color: transparent;
+}
+
+.hasvalue
+{
+    background-color: #fff !important;
+    border: none;
+    font-weight: bold;
+    text-transform: capitalize;
+}
