--- a/media/css/main.css
+++ b/media/css/main.css
@@ -583,19 +583,98 @@ td
 	font-weight: bold;
 }
 
-.interactive-scenario input {
-    margin: 5px;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    background: #efefef;
-    border-color: transparent;
+/* MODULE2 INTERACTIVE */
+
+.designNotation .notation_row {
+    width: 200px;
+    height: 40px;
 }
 
-.hasvalue
-{
+.designNotation .notation_field {
+    float: left;
+    margin: 0px 5px 0px 0px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #ccc;
+    text-align: center;
+    background: #efefef;
+    cursor: pointer;
+}
+
+
+.designNotation .hasvalue {
     background-color: #fff !important;
     border: none;
     font-weight: bold;
     text-transform: capitalize;
+}
+
+.designNotation .hasvalue:hover {
+    background-color: #dfecf9 !important;
+}
+
+.designNotation .active {
+    border: 2px solid #3399ff;
+    background-color: #d8e8f8;
+}
+
+.designNotation .notation_select {
+    display: none;
+    width: 250px;
+    height: 40px;
+    border: none;
+}
+
+.designNotation .notation_feedback,
+.designNotation .no_entry,
+.designNotation .notation_undetermined,
+.designNotation .notation_incorrect,
+.designNotation .notation_correct,
+.designNotation .notation_answerkey {
+    display: none;
+}
+
+.designNotation .visible {
+    display: block;
+}
+
+.designNotation .notation_option {
+    float: left;
+    margin-right: 2px;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    /*border: 1px solid #ccc;
+    padding: 5px;
+    text-align: center;*/
+    cursor: pointer;
+}
+
+.designNotation .answerkeyrow {
+    width: 200px;
+    height: 40px;
+    
+}
+
+.designNotation .answerkey_cell {
+    float: left;
+    margin: 1px 5px 0px 0px;
+    width: 20px;
+    height: 20px;
+    border: none;
+    text-align: center;
+    background: #fff;
+    font-weight: bold;
+}
+
+.designNotation .notation_answerkey:hover .answerkey_cell {
+    margin: 0px 5px 0px 0px;
+    border: 1px dotted #99ccff;
+    width: 18px;
+    height: 18px;
+}
+
+.designNotation #show_answerkey_grid {
+    cursor: pointer;
+    color: #0099ff;
 }
