--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -5,8 +5,7 @@
     <h1>Welcome to the PHTC Training Environment</h1>
     <div id="greeting-login">
         <div id="welcome">
-            <p>But ere this was done, Pip, who had been slily hovering near by all this while, drew nigh to him where he lay, and with soft sobbings, took him by the hand; in the other, holding his tambourine.</p>
-            <p>"Poor rover! will ye never have done with all this weary roving? where go ye now? But if the currents carry ye to those sweet Antilles where the beaches are only beat with water-lilies, will ye do one little errand for me? Seek out one Pip, who's now been missing long: I think he's in those far Antilles. If ye find him, then comfort him; for he must be very sad; for look! he's left his tambourine behind;—I found it. Rig-a-dig, dig, dig! Now, Queequeg, die; and I'll beat ye your dying march."</p>
+            <p>PUT STUFF HERE!!! WHERE IS IT??????</p>
         </div><!--end #welcome-->
         <div id="user_log_in">            
             <h3 class="log_in">Please log in</h3>
