--- a/phtc/templates/quizblock/short_text.html
+++ b/phtc/templates/quizblock/short_text.html
@@ -3,10 +3,17 @@
 {% if block.rhetorical %}
   <input type="text" name="question{{question.id}}" />
 {% else %}
+
   {% if response %}
+  	<p class="your-answer">Your Answer:</p>
     <p class="yours">{{response.value|markdown}}</p>
-  {% else %}
-    <input type="text" name="pageblock-{{block.pageblock.id}}-question{{question.id}}" />
+    {% else %}
+    {% if block.reading_exercise %}
+  		<p class="your-answer">Your Answer:</p>
+	  	 <input class="reading-exercise" type="text" name="pageblock-{{block.pageblock.id}}-question{{question.id}}" />
+	  {% else %}
+	    <input type="text" name="pageblock-{{block.pageblock.id}}-question{{question.id}}" />
+	  {% endif %}
   {% endif %}
+
 {% endif %}
-  
