--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -5,7 +5,21 @@
     <h1>Welcome to the PHTC Training Environment</h1>
     <div id="greeting-login">
         <div id="welcome">
-            <p>PUT STUFF HERE!!! WHERE IS IT??????</p>
+		<p>
+		The New York City-Long Island-Lower Tri County Public Health Training Center is pleased to offer a comprehensive collection of competency-based public health and public health-related trainings. Our training programs are free, high-quality, and interactive &#8211; designed to fully engage learners and impart needed knowledge and skills for the public health workforce.
+		</p>
+		<p>
+		In order to enroll in these programs, you will need to complete a one-time registration form. In registering, you will create your own personal dashboard where you will gain access to all of our training resources. In addition, from your dashboard you can:
+		</p>
+		<ul>
+		<li>Keep track of progress through and completion of different trainings</li>
+		<li>Print and store certificates of completion</li>
+		<li>Request continuing education credits</li>
+		<li>Update your user profile</li>
+		</ul>
+		<p>
+		New trainings are always being developed and will be added regularly to the training catalog. Be sure to log-in regularly to check for updates!
+		</p>
         </div><!--end #welcome-->
         <div id="user_log_in">            
             <h3 class="log_in">Please log in</h3>
