changed the name on the completed certifiacte to first and last name

--- a/phtc/templates/main/certificate.html
+++ b/phtc/templates/main/certificate.html
@@ -79,7 +79,7 @@ a.print-certificate{
 	<div class="printable">
  		<img class="certificate-diploma" src="/site_media/img/certificate_blank.jpg">
  		<div id="inner-wrap">
-			<div id="user">{{ user }} has completed</div>
+			<div id="user">{{ profile.fname }} {{ profile.lname }} has completed</div>
 			<div id="label">{{ module.label }}</div>
  		</div><!--end inner-wrap-->
 	</div><!--end .printable-->
