--- a/media/css/main.css
+++ b/media/css/main.css
@@ -724,6 +724,8 @@ p.your-answer{
 
 .modalpageNav {
     float: right;
+    padding-bottom: 10px;
+    margin-top: -20px;
 }
 
 .modal
@@ -762,4 +764,12 @@ p.your-answer{
 	text-align: left;
 	font-weight: bold;
 	border: 1px solid #999;
+}
+
+.pull-left {
+    padding-right: 20px !important;
+}
+
+.pull-right {
+    padding-left: 20px !important;
 }
