--- a/phtc/templates/main/certificate.html
+++ b/phtc/templates/main/certificate.html
@@ -56,7 +56,7 @@ a.print-certificate
 	background-position: 10px center;
 	padding-top: 10px;
 	padding-left: 40px;
-	float: left;
+	float: right;
 }
 
 /*start - printout style as seen in browser print dialog box*/
@@ -95,6 +95,7 @@ a.print-certificate
 
 <h2>Certificate Earned</h2>
 
+<p>To request continuing education credits, email <a href="mailto:phtc@columbia.edu">phtc@columbia.edu</a>.</p>
 	<p>
 		<a class="certificate print-certificate">Print Certificate</a>
 	</p>
