adding in a funnel to make sure UNI users have completed the profile survey

--- a/phtc/templates/main/profile.html
+++ b/phtc/templates/main/profile.html
@@ -29,6 +29,17 @@
 	    <p>Your user profile has been updated.</p>
 	  </div>
 	</div><!--end #myModal-->
+
+	<div class="modal hide" id="myModal2">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal">×</button>
+	    <h3>Greetings!</h3>
+	  </div>
+	  <div class="modal-body">
+	    <p>Please complete your user profile.</p>
+	  </div>
+	</div><!--end #myModal-->
+
 	<script src="/site_media/js/registration.js"></script>
 	<script src="/site_media/js/edit_profile.js"></script>
 {% endblock %}
