makes sure the email is saved, better ui feedback on form errors

--- a/phtc/templates/main/profile.html
+++ b/phtc/templates/main/profile.html
@@ -14,7 +14,7 @@
     
 
     <!-- begin user feedback alerts-->
-    <div class="alert alert-block alert-error hide fade in" style="position:absolute; top:50%; left:35%; width:200px;">
+    <div class="alert alert-block alert-error hide fade in error" style="position:absolute; top:50%; left:35%; width:200px;">
 		<button type="button" class="close close-alert">×</button>
         <h4 class="alert-heading">Password Error</h4>
         <p>The passwords must match.</p>
