handoff is working now server-side, used render_to_response with context

--- a/phtc/templates/registration/registration_form.html
+++ b/phtc/templates/registration/registration_form.html
@@ -5,7 +5,7 @@
 <h3>Create a new PHTC account</h3>
 <p>Use the following form to create a new account to access PHTC modules.</p>
 
-    <form method='post' id="registration" action='' class="well form-horizontal">{% csrf_token %}
+    <form method='post' id="registration" action='{{ register }}' class="well form-horizontal">{% csrf_token %}
 			{{form|bootstrap}}
 	
 	<div class="fieldwrapper">
