adding in UI for if the course is not avalable and redirects if it is

--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -65,5 +65,15 @@
     <div class="divclearfix"></div><!-- divclearfix -->
 </div><!-- end #dashboard-toc -->
 
+	<div class="modal hide" id="myModal">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal">×</button>
+	    <h3>We appologize.</h3>
+	  </div>
+	  <div class="modal-body">
+	    <p>That course is not available. Please choose from one of the currently available modules.</p>
+	  </div>
+	</div><!--end #myModal-->
+
 <script src="/site_media/js/dashboard.js"></script>
 {% endblock %}
