commit is merged - added admin_lock concept to lock of areas of development & edits to NYNJ login

--- a/phtc/templates/registration/nynj_login.html
+++ b/phtc/templates/registration/nynj_login.html
@@ -7,7 +7,7 @@
         <div id="user_log_in">            
             <h3 class="log_in">Please log in</h3>
             
-            <form method="post" action="/accounts/login/?next={% url dashboard %}" class="well">
+            <form method="post" action="/accounts/login/?next=module-1/one/learning-objectives/" class="well">
             {% csrf_token %}
 	            <p>If you have a project account...</p>
 	            
