--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -24,7 +24,7 @@
         <div id="user_log_in">            
             <h3 class="log_in">Please log in</h3>
             
-            <form method="post" action="./?next={% url dashboard %}" class="well">
+            <form method="post" action="./?next=/module-1/" class="well">
             {% csrf_token %}
             <p>If you have a project account...</p>
             
