--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -23,8 +23,8 @@
 
 <div id="dashboard-toc">
     <div id="modules">
-    
  {% for module in root.get_children %}
+ {% if  module.id < admin_lock %}	
 	<div class='module' id="{{ module.id }}">
 		{% comment %}{% for info in dashboard_info %}
 			{% ifequal module.id info.dashboard_id %}
@@ -33,6 +33,7 @@
 				{% endifnotequal %}
 			{% endifequal %}
 		{% endfor %}{% endcomment %}
+
 		{% get_user_section_status request.user module as status %}
 		{% ifequal status.status "complete" %}<!-- **** COMPLETED -->
 			<div class="completed-icon"></div>
@@ -57,13 +58,63 @@
 		{% else %}
 		{% endif %}
 </div><!--end .module-->
+{% endif %}
 {% endfor %}
-   
+ 
+
+{% for module in root.get_children %}
+ {% if  user.is_staff and module.id >= admin_lock  %}	
+	<div class='module' id="{{ module.id }}">
+		{% comment %}{% for info in dashboard_info %}
+			{% ifequal module.id info.dashboard_id %}
+				{% ifnotequal info.info "" %}
+					<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
+				{% endifnotequal %}
+			{% endifequal %}
+		{% endfor %}{% endcomment %}
+
+		{% get_user_section_status request.user module as status %}
+		{% ifequal status.status "complete" %}<!-- **** COMPLETED -->
+			<div class="completed-icon"></div>
+			<a class="show-module completed" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
+			<a class="certificate" href="/certificate{{ module.get_absolute_url }}"><span class="tooltip-bottom" rel="tooltip" title="Print your completion certificate"><img src="/site_media/img/shim.png" width="30" height="30" /></span></a>
+			<div class="divclearfix"></div>
+		{% endifequal %}
+		{% ifequal status.status "allowed" %}
+			<div class="uninitiated-icon"></div>
+			<a class="show-module" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
+			<div class="divclearfix"></div>
+		{% endifequal %}
+		{% ifequal status.status "in_progress" %}<!-- **** IN PROGRESS -->
+			<div class="inprogress-icon"></div>
+			<a class="show-module inprogress" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
+			<div class="divclearfix"></div>
+		{% endifequal %}
+		{% if not status %}
+			<div class="uninitiated-icon"></div>
+			<a class="show-module uninitiated" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
+			<div class="divclearfix"></div>
+		{% else %}
+		{% endif %}
+</div><!--end .module-->
+{% endif %}
+{% endfor %}
+
     
     </div>
     <div id="return"></div><!-- end #return -->
     <div class="divclearfix"></div><!-- divclearfix -->
 </div><!-- end #dashboard-toc -->
+
+	<div class="modal hide" id="myModal">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal">×</button>
+	    <h3>We appologize.</h3>
+	  </div>
+	  <div class="modal-body">
+	    <p>That course is not available. Please choose from one of the currently available modules.</p>
+	  </div>
+	</div><!--end #myModal-->
 
 <script src="/site_media/js/dashboard.js"></script>
 {% endblock %}
