--- a/phtc/templates/main/reports.html
+++ b/phtc/templates/main/reports.html
@@ -16,7 +16,7 @@
 {% endfor %}
 
 {% for module in complete_modules %}
-	<p>{{ module.0.id }} , {{  module.1 }}</p>
+	<p>{{ module.0.user_id }} , {{  module.1 }}</p>
 {% endfor %}
 
 {% endblock %}
