refactor number of completers

--- a/phtc/templates/main/reports.html
+++ b/phtc/templates/main/reports.html
@@ -8,7 +8,7 @@
 	<h2> Number of Completers</h2>
 	{{ completed_modules_counted }}
 	{% for mod in completed_modules_counted %}
-	<p class="users">{{ mod.0 }} - {{ mod.1 }} completers</p>
+	<p class="users">{{ mod.Section}} - {{ mod.Number_of_completers }} completers</p>
 	{% endfor %}
 </div><!--end #number-of-completers-->
 
