--- a/phtc/templates/registration/nynj_registration_form.html
+++ b/phtc/templates/registration/nynj_registration_form.html
@@ -4,8 +4,8 @@
 {% block content %}
 <h3>Create a new PHTC account</h3>
 <p>Use the following form to create a new account to access PHTC modules.</p>
-
-    <form method='post' id="registration" action='{{ register }}' class="well form-horizontal">{% csrf_token %}
+{{ args }}
+    <form method='post' id="registration" action='/create_nynj_user/?course={{ args.course }}' class="well form-horizontal">{% csrf_token %}
 			{{form|bootstrap}}
 	
 	<div class="fieldwrapper">
