--- a/phtc/templates/registration/nylearns_registration_form.html
+++ b/phtc/templates/registration/nylearns_registration_form.html
@@ -5,7 +5,7 @@
 <h3>Create a new PHTC account</h3>
 <p>Use the following form to create a new account to access PHTC modules.</p>
 {{ args }}
-    <form method='post' id="registration" action='/create_nynj_user/?course={{ args.course }}' class="well form-horizontal">{% csrf_token %}
+    <form method='post' id="registration" action='/create_nylearns_user/?course={{ args.course }}' class="well form-horizontal">{% csrf_token %}
 			{{form|bootstrap}}
 	
 	<div class="fieldwrapper">
