--- a/phtc/templates/registration/nylearns_registration_form.html
+++ b/phtc/templates/registration/nylearns_registration_form.html
@@ -8,7 +8,7 @@
 			{{form|bootstrap}}
 	
 	<div class="fieldwrapper">
-        <input class="btn btn-primary" value="Send activation email" /></td>
+        <input class="btn btn-primary" value="Register" /></td>
 	</div><!-- fieldwrapper -->
     </form>
 	<script src="/site_media/js/registration.js"></script>
