added email templates and the function to send out notification that an NYLearns user has completed a module

--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -67,7 +67,7 @@
 	<div class="modal hide" id="myModal">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal">×</button>
-	    <h3>We appologize.</h3>
+	    <h3>We apologize.</h3>
 	  </div>
 	  <div class="modal-body">
 	    <p>That course is not available. Please choose from one of the currently available modules.</p>
