--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -83,7 +83,7 @@
 
 {% if section.get_next %}
 {% with section.get_next as next_section %}
-<li class="next"><a href="{{section.get_next.get_absolute_url}}">{{section.get_next.label}} &rarr;</a></li>
+<li class="next"><a id="next_section" href="{{section.get_next.get_absolute_url}}">{{section.get_next.label}} &rarr;</a></li>
 {% endwith %}
 {% endif %}
 </ul>
