small change to page template

--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -16,7 +16,7 @@
 
 {% block title %}{{section.label}}{% endblock %}
 
-{% block pagetitle %}<h1 id="section-header">{{section.label}}</h1>{% endblock %}
+{% block pagetitle %}<h1 class="section-label-header" id="section-header">{{section.label}}</h1>{% endblock %}
 
 {% block sidebar %}
         <!-- ###### Secondary Navigation ###### -->
