1 step closer to eval report

--- a/phtc/templates/main/reports.html
+++ b/phtc/templates/main/reports.html
@@ -21,6 +21,9 @@
     <input type="submit" value="Age & Gender Report" class="btn btn-primary">
     <input type="hidden" name="report" value="age_gender_report">
 </form>
+<p>
+    {{ age_gender_report }}
+</p>
 
 <form method="post" action="/reports/" class="w">
     <input type="submit" value="Course Report" class="btn btn-primary">
