adding in page prints to help filter out why reports are off

--- a/phtc/templates/main/reports.html
+++ b/phtc/templates/main/reports.html
@@ -34,7 +34,13 @@
     <input type="submit" value="Evaluation Report" class="btn btn-primary">
     <input type="hidden" name="report" value="eval_report">
 </form>
-
+<p>{{ users }}</p>
+<p>{{ users|length }}</p>
+<p>{{ completed_user }}</p>
+<p>{{ completed_user|length }}</p>
+<p>{{ counted }}</p>
+<p>{{ qac }}</p>
+<h2>{{ module_title }}</h2>
 {{ evaluation_report }}
 
 {% else %}
