--- a/phtc/templates/registration/nylearns_login.html
+++ b/phtc/templates/registration/nylearns_login.html
@@ -7,7 +7,7 @@
 	color:#777;
 }
 </style>
-    <h1>Welcome to the PHTC Training Environment</h1>
+    <h1>Hello NYLearnsPH.com Learner!</h1>
     <div id="greeting-login">
         <div id="user_log_in">            
             <h3 class="log_in">Please log in</h3>
@@ -35,6 +35,19 @@
             </form>
             
         </div><!--end #user_log_in-->
+        <div id="welcome" style="margin:0 0 0 25px;">
+        	<p>Welcome to the New York City-Long Island-Lower Tri-County Public Health Training Center (PHTC). You are a few short clicks away from beginning the online training course you enrolled in on NYLearnsPH.com Learning Management System (LMS).</p>
+        	
+        	<p>If this is your first time on our site, you will need to complete a brief one-time registration. This will allow you to maintain an account here and allow us to share course completion information with NYLearnsPH.com to ensure that your learning record is complete on both sites. When you log-in with the Username and Password you set up during this registration, you will gain access to all available programs through our training environment.
+        	</p>
+        	
+        	<p>If you previously registered with the PHTC site, log-in now with the Username and Password you created when first registered. (If you've forgotten your username or password, you can retrieve them <a href="/registration/password/reset/">here</a> using your email address.</p>
+        	
+        	<p>Thank you visiting our site and we hope you enjoy our training programs,</p>
+        	
+        	<p>New York City-Long Island-Lower Tri-County Public Health Training Center Staff</p>
+
+        </div><!--end #welcom-->
     </div><!--end #greeting-login-->
     <script src="/site_media/js/nylearns_test_user.js"></script>
 {% endblock %}
