--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -305,6 +305,12 @@ method="post">
 <input type="submit" value="save" class="btn btn-primary" />
 </form>
 
+<form action="." method="post"
+      class="form-horizontal well">
+  {{ module_type.edit_form|bootstrap }}
+<input type="submit" value="save" class="btn btn-primary" />
+</form>
+
 <form action="{% url delete-section section.id %}" method="post" class="well">
 <input type="submit" value="delete this page" class="btn btn-danger"/>
 </form>
